# HoverRaceWeb

./: .gitignore  .gitmodules  CMakeLists.txt  NetTarget.sln  README.md  build-native.sh  build-web.sh  flake.nix  hoverrace.js  hoverrace.wasm
ColorTools/: ColorTools.h
Emscripten/: Hover.html  hoverpeer.js  peer.html
Game2/: CMakeLists.txt  ClientSession.cpp  Game2.rc  GameApp.cpp  GameApp.h  Observer.cpp  Observer.h  resource.h  sdlmain.cpp
GameSDL/: CMakeLists.txt  Camera.h  ClientSession.cpp  ClientSession.h  ENetInterface.cpp  ENetInterface.h  EmscriptenInterop.cpp  EmscriptenInterop.h  GLLevelLoader.cpp  GLLevelLoader.h  GLObserver.cpp  GLObserver.h  GhostFileFormat.h  GhostPlayer.cpp  GhostPlayer.h  GhostRecorder.cpp  GhostRecorder.h  NetInterface.cpp  NetInterface.h  NetworkSession.cpp  NetworkSession.h  Observer.cpp  Observer.h  SDLGameApp.cpp  SDLGameApp.h  VideoPalette.cpp  VideoPalette.h  WebPeerInterface.cpp  WebPeerInterface.h  quad-sapp.h  resource.h  sdlmain.cpp  triangle-sapp.h
MainCharacter/: MainCharacter.cpp  MainCharacter.h  MainCharacterRenderer.cpp  MainCharacterState.h
Model/: CMakeLists.txt  ConcreteShape.cpp  ContactEffect.h  GameSession.cpp  GameSession.h  Level.h  MazeElement.cpp  MazeElement.h  PhysicalCollision.cpp  PhysicalCollision.h  ShapeCollisions.cpp  ShapeCollisions.h  Shapes.cpp  Shapes.h
NetTarget/: CMakeLists.txt  NetTarget.vcxproj  NetTarget.vcxproj.filters
NetTarget/ColorTools/: CMakeLists.txt  ColorTools.cpp  ColorTools.vcxproj  ColorTools.vcxproj.filters
NetTarget/Game2/: CMakeLists.txt  ClientSession.cpp  Game2.vcxproj  Game2.vcxproj.filters  GameApp.cpp  GameApp.h  NetworkSession.cpp  Observer.cpp  StdAfx.h  TrackSelect.cpp  main.cpp
NetTarget/GameServer/: GameServer.vcxproj  GameServer.vcxproj.filters
NetTarget/MainCharacter/: CMakeLists.txt  MainCharacter.cpp  MainCharacter.h  MainCharacter.vcxproj  MainCharacter.vcxproj.filters  MainCharacterRenderer.cpp  MainCharacterRenderer.h
NetTarget/MazeCompiler/: MazeCompiler.vcxproj  MazeCompiler.vcxproj.filters
NetTarget/Model/: ActorPool.h  CMakeLists.txt  ConcreteShape.h  ContactEffect.cpp  ContactEffect.h  FreeElementMovingHelper.cpp  FreeElementMovingHelper.h  GameSession.cpp  GameSession.h  Level.cpp  Level.h  MazeElement.cpp  MazeElement.h  Model.vcxproj  Model.vcxproj.filters  RaceEffects.h  Shapes.h  StdAfx.h
NetTarget/ObjFac1/: BumperGate.cpp  CMakeLists.txt  DoubleSpeedSource.cpp  FinishLine.cpp  FuelSource.cpp  GenericRenderer.cpp  HoverRender.cpp  Mine.cpp  Missile.cpp  ObjFac1.h  ObjFac1.vcxproj  ObjFac1.vcxproj.filters  ObjectFromStaticFactory.cpp  main.cpp
NetTarget/ObjFacTools/: BitmapSurface.cpp  BitmapSurface.h  CMakeLists.txt  FreeElementBase.cpp  FreeElementBase.h  FreeElementBaseRenderer.cpp  FreeElementBaseRenderer.h  ObjFacTools.vcxproj  ObjFacTools.vcxproj.filters  ObjectFactoryData.cpp  ObjectFactoryData.h  ResActor.cpp  ResActor.h  ResBitmap.cpp  ResBitmap.h  ResSound.cpp  ResSound.h  ResSprite.cpp  ResourceLib.cpp  ResourceLib.h  SpriteHandle.h
NetTarget/PaletteCreator/: PaletteCreator.cpp  PaletteCreator.vcxproj  PaletteCreator.vcxproj.filters
NetTarget/ResourceCompiler/: BitmapHelper.cpp  ResSoundBuilder.cpp  ResourceCompiler.vcxproj  ResourceCompiler.vcxproj.filters
NetTarget/Util/: CMakeLists.txt  DllObjectFactory.cpp  DllObjectFactory.h  FastArray.h  FuzzyLogic.cpp  ObjectFromStaticFactory.h  Profiler.cpp  RecordFile.cpp  RecordFile.h  StrRes.cpp  StrRes.h  StringResources.cpp  Util.vcxproj  Util.vcxproj.filters  WorldCoordinates.cpp  WorldCoordinates.h  nomfc_stdafx.h  resource.h  stdafx.h
NetTarget/VideoServices/: 2DViewport.cpp  2DViewport.h  3DViewport.cpp  3DViewport.h  3DViewportRendering.cpp  Bitmap.cpp  CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  ColorPaletteEntry.h  Patch.cpp  Patch.h  SoundServer.h  Sprite.cpp  Sprite.h  VideoBuffer.cpp  VideoBuffer.h  VideoBufferDirectDraw.cpp  VideoBufferDirectDraw.h  VideoServices.vcxproj  VideoServices.vcxproj.filters
ObjFac1/: BallElement.cpp  CMakeLists.txt  DefaultSurface.cpp  HoverRender.cpp  HoverRender.h  Missile.cpp  Missile.h  ObjFac1.h  PowerUp.cpp  TestElement.cpp  WoodSurface.cpp  main.cpp
ObjFacTools/: BitmapSurface.cpp  BitmapSurface.h  FreeElementBase.cpp  FreeElementBase.h  MovementSpec.h  ResActor.cpp  ResActor.h  ResBitmap.cpp  ResSprite.h  ResourceLib.cpp  SpriteHandle.cpp
Server/: CLAUDE.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
Server/src/: gameManager.ts  server.ts  types.ts
Util/: BitPacking.h  DllObjectFactory.cpp  FastArray.h  FastFifo.h  FastMemManip.h  FuzzyLogic.cpp  FuzzyLogic.h  MR_Types.h  ObjectFromStaticFactory.h  Profiler.cpp  Profiler.h  RecordFile.cpp  RecordFile.h  StrRes.h  StringResources.cpp  WorldCoordinates.cpp  WorldCoordinates.h  nomfc_stdafx.h
VideoServices/: 2DViewport.cpp  3DViewport.cpp  3DViewportRendering.cpp  Bitmap.h  CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  ColorPaletteEntry.h  ColorTab.cpp  MulDiv.h  SDLSoundServer.cpp  SoundServer.cpp  SoundServer.h  Sprite.cpp  Sprite.h  StubSoundServer.cpp  VideoBuffer.cpp  VideoBuffer.h  VideoBuffer2DDraw.cpp  VideoBufferDirectDraw.h
VideoServices/GL/: Camera.h  GLRenderer.cpp  GLRenderer.h  GLViewport.cpp  GLViewport.h  SokolState.h  quad-sapp.glsl  quad-sapp.h  sokol_impl.cpp
VideoServices/GL/shaders/: background.glsl  background.h  floor.glsl  floor.h  free_element.glsl  free_element.h  wall.glsl  wall.h  water.glsl  water.h  world.glsl  world.h
Web/Client/: .env  .gitignore  eslint.config.js  index.css  index.html  package-lock.json  package.json
Web/Client/src/: About.tsx  (+46 more)
Web/Server/: .env  .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json
WebClient/: .eslintrc.json  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
WebClient/public/: emscripten.js
WebClient/src/: ActiveGame.tsx  App.tsx  ConnectionStatus.tsx  GameList.tsx  GameTile.tsx  PlayerList.tsx  PlayerNameInput.tsx  commands.ts  main.tsx  peerTypes.ts  types.ts  useGameData.ts  usePeers.ts
(+34 files in other folders)
