cmake_minimum_required(VERSION 3.20)
project(HoverRace)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)

set(SDL_STATIC ON CACHE BOOL "Build SDL3 as a static library" FORCE)
set(SDL_SHARED OFF CACHE BOOL "Disable building SDL3 as a shared library" FORCE)
add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
add_subdirectory(Util)
add_subdirectory(ColorTools)
add_subdirectory(Model)
add_subdirectory(MainCharacter)
add_subdirectory(ObjFacTools)
add_subdirectory(ObjFac1)
add_subdirectory(VideoServices)
add_subdirectory(GameSDL)
